--- a/boteco/index.html
+++ b/boteco/index.html
@@ -13,7 +13,7 @@
         </p>
         <h2>como chegar</h2>
         <p>
-            estamos no centro da cidade de weblandia
+            estamos no centro da cidade de weblandia siga a <a href="direcao/direcao.html">instrucao</a>
         </p>
 		
     </body>
